# AmpliconPE

./: LICENSE  README.md  aligned_pileups.csv  consolidated_info.csv  consolidated_output.h5  consolidated_pileups.csv  consolidated_scores.csv  derep_stats.csv  re_cythonize.py  requirements.txt  setup.cfg  setup.py  unaligned.csv
.github/workflows/: python-app.yml
AmpliconPE/: __init__.py  ssw_lib.py
Complete-Striped-Smith-Waterman-Library/src/: example_c  example_cpp  pyssw.py  ssw.c  ssw_test
data/: all_sgRNAs.csv  consolidated_outputs.h5
data/TuBa-seq_FASTQs/76/: aligned.csv  alignment_scores.csv  error_info.csv  error_rate.csv  info.csv  outcomes.csv  pileups.csv  scores.csv  stats.csv  unaligned.csv
data/TuBa-seq_FASTQs/77/: aligned.csv  alignment_scores.csv  error_info.csv  error_rate.csv  info.csv  outcomes.csv  pileups.csv  scores.csv  stats.csv  unaligned.csv
data/TuBa-seq_FASTQs/78/: aligned.csv  alignment_scores.csv  error_info.csv  error_rate.csv  info.csv  outcomes.csv  pileups.csv  scores.csv  stats.csv  unaligned.csv
data/TuBa-seq_FASTQs/79/: aligned.csv  alignment_scores.csv  error_info.csv  error_rate.csv  info.csv  outcomes.csv  pileups.csv  scores.csv  stats.csv  unaligned.csv
data/TuBa-seq_FASTQs/80/: aligned.csv  alignment_scores.csv  error_info.csv  error_rate.csv  info.csv  outcomes.csv  pileups.csv  scores.csv  (+2 more)
examples/: TuBa_example  derep  example
src/AmpliconPE/: __init__.py  aligner.py  estimates.py  filters.py  old.py  pmap.py  recurrent_read_error.py  rre.py  shared.py  ssw_lib.py
tests/: __init__.py  test_main.py
(+10 files in other folders)
