[metadata]
name = AmpliconPE
version = 0.1
description = Sequence Dereplicator for Paired-End Amplicon (Barcode) Libraries
url = https://github.com/cancerevo/AmpliconPE
author = Christopher McFarland
author_email = christopher.mcfarland@case.edu
license = MIT   
classifiers = 
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
	License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Bio-Informatics

[tool:pytest]
pythonpath = . src

[options.packages.find]
where=src
[options]
packages = find: 
